# Codex-Quant-Lab

./: .gitignore  AGENTS.md  AUTORESEARCH.md  README.md  pyproject.toml
data/: sample_ohlcv.csv
docs/: TODO.md  example_run_report.md  maintenance-cli-workflow-organization.md  milestone-10-portfolio-research-depth.md  milestone-11-research-automation-guardrails.md  milestone-12-data-source-trust.md  milestone-13-evidence-decision-quality.md  milestone-14-backtest-realism-robustness.md  milestone-3-research-usability.md  milestone-4-validation-realism.md  milestone-5-strategy-research-depth.md  milestone-6-research-trustworthiness.md  milestone-7-guided-research-workflow.md  milestone-8-portfolio-multi-asset-research.md  milestone-9-portfolio-usability-research-loops.md  milestones.md  portfolio-workflow.md  research-workflow.md  roadmap-to-ready.md  strategy-schema-v1.schema.json  strategy-schema.md  trustworthy-example-workflow.md
tests/: cli_fixtures.py  test_backtester_core.py  test_benchmarks.py  test_charts.py  test_cli.py  test_cli_experiments.py  test_cli_fetch_and_templates.py  test_cli_params.py  test_cli_portfolio.py  test_cli_portfolio_research_plan.py  test_cli_research_plan.py  test_cli_robustness.py  test_cli_run.py  test_cli_run_index.py  test_cli_sweep_workflows.py  test_costs.py  test_data_fetch.py  test_data_quality.py  test_data_source.py  test_evidence_labels.py  test_experiment_summary.py  test_metrics_reporting.py  test_parameter_neighborhood.py  test_portfolio_artifacts.py  test_portfolio_backtest.py  test_portfolio_batch.py  (+23 more)
(+77 files in other folders)
